static/css/base.css
@charset "UTF-8";
body {
  font-family: "Cabin";
  margin: 0;
  -webkit-font-smoothing: antialiased; }

.sidebar {
  position: fixed;
  left: 15px;
  top: 15px;
  width: 80px;
  font-family: Helvetica, sans-serif; }
  .sidebar a {
    text-decoration: none; }
  .sidebar img {
    padding: 0 3px;
    border: 0; }
  .sidebar .avatar {
    padding: 0;
    margin-left: 2px;
    border-radius: 5px; }
  .sidebar .name {
    text-transform: uppercase;
    margin: 10px 0 20px 0; }
    .sidebar .name #fname {
      padding-left: 1px;
      font-size: 23px;
      letter-spacing: 5px;
      color: var(--main-text-color); }
    .sidebar .name #lname {
      font-size: 17px;
      font-weight: bold;
      letter-spacing: 1px;
      color: var(--main-text-color); }
  .sidebar .meta a {
    margin-left: 0px;
    color: var(--main-text-color); }
    .sidebar .meta a:hover {
      color: #227ce8; }
  .sidebar .meta {
    margin-left: 4px; }
  .sidebar .meta .icon {
    margin-right: 6px; }
  .sidebar .sections {
    margin: 15px 0 0 0; }
    .sidebar .sections a {
      padding: 3px 0;
      color: var(--main-text-color);
      font-weight: bold;
      font-size: 12px;
      display: block; }
      .sidebar .sections a:hover {
        color: #227ce8; }
    .sidebar .sections ul {
      margin: 0;
      padding: 0; }
    .sidebar .sections li {
      list-style: none;
      margin-bottom: 7px; }

.content {
  max-width: 700px;
  margin-left: 150px;
  margin-right: 20px;
  margin-bottom: 50px; }
  .content h1 {
    color: var(--main-text-color);
    font-family: "Yanone Kaffeesatz", Helvetica, sans-serif;
    font-weight: 400; }
  .content h1 a {
  color: var(--main-text-color);
    text-decoration: none; }
  .content h2 {
    color: var(--main-text-color);
    font-family: "Yanone Kaffeesatz", Helvetica, sans-serif;
    font-weight: 400; }
  .content h2 a {
    color: var(--main-text-color);
    text-decoration: none; }
  .content h3 {
    color: var(--main-text-color);
    font-family: "Yanone Kaffeesatz", Helvetica, sans-serif;
    font-weight: 400; }
  .content h3 a {
    color: var(--main-text-color);
    text-decoration: none; }
  .content h4 {
    color: var(--main-text-color);
    font-family: "Yanone Kaffeesatz", Helvetica, sans-serif;
    font-weight: 400; }
  .content h4 a {
    color: var(--main-text-color);
    text-decoration: none; }
  .content h1 {
    font-size: 36px;
    margin: 18px 0 5px 0; }
  .content h2 {
    font-size: 30px;
    margin-bottom: 15px; }
  .content h3 {
    color: var(--main-text-color);
    font-size: 25px;
    padding-bottom: 5px;
    margin-bottom: 10px; }
  .content p {
    font-size: 16px;
    margin-top: 0;
    margin-bottom: 1.2em;
    line-height: 1.7em; }
    .content p code {
      font-size: 12px;
      background-color: var(--main-background-color);
      border: 1px solid #777777;
      border-radius: 3px;
      padding: 2px 3px; }
  .content img {
    padding: 3px;
    border: 1px solid #eeeeee;
    max-width: 100%; }
  .content li {
    margin-bottom: 10px;
    line-height: 1.4em; }
  .content blockquote {
    font-style: italic;
    font-size: 14px;
    padding: .25em 1em;
    margin: 1em 1em 0 1em;
    color: #444; }
    .content blockquote cite:before {
      content: '— '; }
    .content blockquote cite {
      display: block;
      margin-top: .5em;
      text-align: right;
      color: #111;
      font-style: normal; }
  .content .byline {
    margin-bottom: 17px;
    font-family: "Yanone Kaffeesatz", Helvetica, sans-serif;
    padding-left: 0px;
    font-size: 17px;
    color: #777; }
  .content .aside {
    background-color: #eeeeee;
    padding: 14px;
    font-size: 14px;
    margin: 5px 0 15px 0;
    font-family: Helvetica, sans-serif;
    line-height: 1.6em; }
  .content .listing {
    margin: 10px 0 0 0;
    padding: 0;
    font-family: Helvetica, sans-serif; }
    .content .listing ul {
      margin: 0;
      padding: 0; }
    .content .listing li {
      font-size: 13px;
      list-style: none;
      padding: 5px 3px;
      margin: 0;
      color: var(--light-text-color);
      border-bottom: 1px solid #eee; }
    .content .listing li span {
      float: right; }
    .content .listing a {
      text-decoration: none; }
      .content .listing a:hover {
        text-decoration: underline; }
  .content .meta {
    margin: 30px 0;
    padding: 10px 0; }
    .content .meta p {
      line-height: 1.4;
      font-size: 14px;
      margin-top: 0px; }
    .content .meta img {
      position: relative;
      float: left;
      margin-top: 0px;
      margin-right: 10px;
      margin-left: -60px;
      border-radius: 4px; }
    .content .meta .copy {
      padding-left: 60px; }
    .content .meta iframe {
      padding-left: 5px; }
  .content .talk-design .color div {
    float: left;
    margin-right: 10px;
    padding: 5px 15px;
    border: 1px solid #000;
    font-family: Helvetica, sans-serif;
    font-size: 12px;
    font-weight: bold; }
  .content .talk-design .color .white {
    color: #fff; }

